<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_project__preference_group_title">

        <EditTextPreference
            android:key="@string/project_title_preference_key"
            android:title="@string/project_title_preference_title" />
        <!-- summary is set programmatically -->

        <EditTextPreference
            android:dialogTitle="@string/project_description_preference_title"
            android:key="@string/project_description_preference_key"
            android:title="@string/project_description_preference_title" />
        <!-- summary is set programmatically -->

        <EditTextPreference
            android:dialogTitle="@string/project_contract_id_preference_title"
            android:key="@string/project_contract_id_preference_key"
            android:title="@string/project_contract_id_preference_title" />
        <!-- summary is set programmatically -->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/expiration_and_duration_limits_preference_group_title">

        <com.tastybug.timetracker.core.ui.projectconfiguration.HourLimitPickerDialog
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:key="@string/tracking_configuration_hour_limit_preference_key"
            android:title="@string/tracking_configuration_hour_limit_preference_title" />
        <!-- summary is set programmatically -->

        <com.tastybug.timetracker.core.ui.projectconfiguration.DatePickerPreference
            android:key="@string/tracking_configuration_start_date_preference_key"
            android:title="@string/tracking_configuration_start_date_preference_title" />
        <!-- summary is set programmatically -->

        <com.tastybug.timetracker.core.ui.projectconfiguration.DatePickerPreference
            android:key="@string/tracking_configuration_end_date_inclusive_preference_key"
            android:title="@string/tracking_configuration_end_date_inclusive_preference_title" />
        <!-- summary is set programmatically -->

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/after_tracking_preference_group_title">

        <ListPreference
            android:entries="@array/rouding_strategy_labels"
            android:entryValues="@array/rouding_strategy_values"
            android:key="@string/tracking_configuration_rounding_strategy_preference_key"
            android:title="@string/tracking_configuration_rounding_strategy_preference_title" />

        <CheckBoxPreference
            android:key="@string/tracking_configuration_prompt_for_description_preference_key"
            android:title="@string/tracking_configuration_prompt_for_description_preference_title" />

    </PreferenceCategory>

</PreferenceScreen>