<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/expiration_and_duration_limits_preference_group_title" >

        <com.tastybug.timetracker.gui.fragment.project.configuration.HourLimitPickerDialog
            android:id="@+id/hour_limit_picker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:key="@string/tracking_configuration_hour_limit_preference_key"
            android:title="@string/tracking_configuration_hour_limit_preference_title" />
        <!-- summary is set programmatically -->

        <com.tastybug.timetracker.gui.fragment.project.configuration.DatePickerPreference
            android:key="@string/tracking_configuration_start_date_preference_key"
            android:title="@string/tracking_configuration_start_date_preference_title" />
        <!-- summary is set programmatically -->

        <com.tastybug.timetracker.gui.fragment.project.configuration.DatePickerPreference
            android:key="@string/tracking_configuration_end_date_inclusive_preference_key"
            android:title="@string/tracking_configuration_end_date_inclusive_preference_title" />
        <!-- summary is set programmatically -->

        <ListPreference
            android:key="@string/tracking_configuration_rounding_strategy_preference_key"
            android:title="@string/tracking_configuration_rounding_strategy_preference_title"
            android:entries="@array/rouding_strategy_labels"
            android:entryValues="@array/rouding_strategy_values" />


    </PreferenceCategory>

</PreferenceScreen>