<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/menu_item_generate_report"
        android:icon="@drawable/ic_create_report"
        android:orderInCategory="0"
        android:title="@string/menu_generate_report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_configure_project"
        android:icon="@drawable/ic_modify"
        android:orderInCategory="1"
        android:title="@string/menu_edit_project"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_wifi_tracking_configuration"
        android:orderInCategory="2"
        android:title="@string/menu_wifi_tracking_configuration"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete_project"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        android:title="@string/menu_delete_project"
        app:showAsAction="never" />
</menu>