<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_local_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/effective_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sample_duration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_toRightOf="@id/time_frame"
            android:layout_toEndOf="@id/time_frame"
            android:layout_alignBaseline="@id/time_frame"
            android:gravity="end" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sample_tracking_record_log"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="start" />

</LinearLayout>