<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ongoing_tracking_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lineOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_tracking_since_X"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lineTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_tracking_duration_X"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/trackingStartStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_start_tracking" />

    </RelativeLayout>

    <TextView
        android:id="@+id/project_closed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/project_closed_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

</LinearLayout>